# x86

./: CMakeLists.txt  LICENSE  README.md
data/: x86_aeskle.csv  x86_aesklewide.csv  x86_avx.csv  x86_avx2.csv  x86_avx5124fmaps.csv  x86_avx512bf16.csv  x86_avx512bitalg.csv  x86_avx512bw.csv  x86_avx512dq.csv  x86_avx512f.csv  x86_avx512fp16.csv  x86_avx512pf.csv  x86_avx512vbmi2.csv  x86_avx512vpopcntdq.csv  x86_avxneconvert.csv  x86_base.csv  x86_cldemote.csv  x86_enqcmd.csv  x86_hreset.csv  x86_invpcid.csv  x86_movdir64b.csv  x86_msrlist.csv  x86_sse2.csv  x86_sse3.csv  x86_vaes.csv  x86_vmx.csv  x86_waitpkg.csv  x86_x87.csv
doc/: x86_desc.md
include/: bytes.h  types.h  x86.h
lib/: x86.c
scripts/: demo.sh  x86_tablegen.py
tests/: x86_001.c  x86_002.c  x86_003.c  x86_004.c  x86_005.c  x86_006.c  x86_disasm.c  x86_opcodes.c
